--- a/book/hugo.toml
+++ b/book/hugo.toml
@@ -1,6 +1,6 @@
 # hugo server --minify --themesDir ../.. --baseURL=http://0.0.0.0:1313/theme/hugo-book/
 
-baseURL = 'https://example.com/'
+baseURL = 'https://book.wesvi.com/'
 title = 'Hugo Book'
 theme = 'hugo-book'
 defaultContentLanguage = 'zh'
@@ -79,7 +79,7 @@ defaultContentLanguageInSubdir = true
 
   # Set source repository location.
   # Used for 'Last Modified' and 'Edit this page' links.
-  BookRepo = 'https://github.com/wesvi/web/book'
+  BookRepo = 'https://github.com/wesvi/web'
 
   # (Optional, default 'commit') Specifies commit portion of the link to the page's last modified
   # commit hash for 'doc' page type.
